--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: /tmp/luci-app-docker_${{ steps.build_ipk.outputs.tag_name }}_all.ipk
-          asset_name: luci-app-docker_${{ steps.build_ipk.outputs.tag_name }}_all.ipk
+          asset_path: /tmp/luci-app-docker-manager_${{ steps.build_ipk.outputs.tag_name }}_all.ipk
+          asset_name: luci-app-docker-manager_${{ steps.build_ipk.outputs.tag_name }}_all.ipk
           asset_content_type: application/octet-stream
