--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,10 @@ jobs:
           Description: Simple Docker manager interface
           Source: http://github.com/lisaac/luci-app-docker
           EOF
+          cat >/tmp/luci-app-docker/CONTROL/postinst <<EOF
+          #!/bin/sh
+          rm -rf /tmp/luci*
+          EOF
           wget -O /tmp/ipkg-build https://raw.githubusercontent.com/openwrt/openwrt/master/scripts/ipkg-build && \
           chmod +x /tmp/ipkg-build && \
           /tmp/ipkg-build -o root -g root /tmp/luci-app-docker /tmp
