add overview page and merge with lean's luci-app-docker & fix container page for luci legacy & unified config for luci-lib-docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           #!/bin/sh
           rm -rf /tmp/luci*
           EOF
+          chmod +x /tmp/luci-app-docker/CONTROL/postinst
           wget -O /tmp/ipkg-build https://raw.githubusercontent.com/openwrt/openwrt/master/scripts/ipkg-build && \
           chmod +x /tmp/ipkg-build && \
           /tmp/ipkg-build -o root -g root /tmp/luci-app-docker /tmp
