--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,7 @@ jobs:
           [ -d $GITHUB_WORKSPACE/root ] && cp -R $GITHUB_WORKSPACE/root/* /tmp/luci-app-dockerman/
           [ -d $GITHUB_WORKSPACE/htdoc ] && cp -R $GITHUB_WORKSPACE/htdoc/* /tmp/luci-app-dockerman/www/
           [ -d $GITHUB_WORKSPACE/htdoc ] && cp -R $GITHUB_WORKSPACE/htdoc/* /tmp/luci-app-dockerman/www/
-                    [ -d $GITHUB_WORKSPACE/po ] && 
-          sudo -E apt-get -y install gcc make && \
+          [ -d $GITHUB_WORKSPACE/po ] && sudo -E apt-get -y install gcc make && \
           mkdir -p /tmp/po2lmo && mkdir -p /tmp/luci-app-dockerman/usr/lib/lua/luci/i18n/ && \
           wget -O /tmp/po2lmo/po2lmo.c https://raw.githubusercontent.com/openwrt/luci/master/modules/luci-base/src/po2lmo.c && \
           wget -O /tmp/po2lmo/Makefile https://raw.githubusercontent.com/openwrt/luci/master/modules/luci-base/src/Makefile && \
